fix(timeline): normalize shortcode line endings for Hugo build

--- a/layouts/shortcodes/attention_timeline.html
+++ b/layouts/shortcodes/attention_timeline.html
@@ -1,4 +1,4 @@
-﻿{{/* Attention timeline shortcode
+{{/* Attention timeline shortcode
    Renders a vertical timeline from data/attention_plan.yaml
    Usage: {{< attention_timeline >}}
 */}}
